# magiskNext

./: 崩溃原因.md
.github/workflows/: debugbuild.yml
app/: gradle.properties
native/src/core/: Cargo.toml  applets.cpp  bootstages.rs  daemon.rs  magisk.rs  package.rs  selinux.rs
native/src/init/: Cargo.toml  init.rs  rootdir.cpp  rootdir.rs  twostage.rs
native/src/sepolicy/: rules.rs
