[package]
name = "magiskinit"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[lints]
workspace = true

[build-dependencies]
cxx-gen = { workspace = true }

[dependencies]
base = { workspace = true }
magiskpolicy = { workspace = true, features = ["no-main"] }
cxx = { workspace = true }
num-traits = { workspace = true }

# 添加KernelSU加载所需的依赖
goblin = "0.8.0"        # ELF文件解析
scroll = "0.12.0"       # 二进制数据操作
anyhow = "1.0.85"       # 错误处理
syscalls = "0.7"     # 系统调用
#kernlog = "0.1.0"       # 内核日志（如果setup_kmsg中使用）